--- a/.github/workflows/move-issues.yml
+++ b/.github/workflows/move-issues.yml
@@ -12,23 +12,48 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            const issueNumber = context.payload.project_card.content_url.split('/').pop();
+            const issueUrl = context.payload.project_card.content_url;
+
+            // Ensure it's an issue card
+            if (!issueUrl.includes('/issues/')) {
+              console.log("Not an issue card. Skipping...");
+              return;
+            }
+
+            const issueNumber = issueUrl.split('/').pop();
             const { data: issue } = await github.rest.issues.get({
               owner: context.repo.owner,
               repo: context.repo.repo,
               issue_number: issueNumber
             });
 
+            // Check if it has a "### Sub-issues" section
             if (issue.body.includes("### Sub-issues")) {
               const matches = issue.body.match(/#(\d+)/g);
               if (matches) {
                 for (const match of matches) {
                   const subIssueNumber = match.replace("#", "");
-                  await github.rest.projects.createCard({
-                    project_id: context.payload.project_card.project_id,
-                    content_id: subIssueNumber,
-                    content_type: "SubTask Request"
+
+                  // Get the column where the parent issue was moved
+                  const columnId = context.payload.project_card.column_id;
+
+                  // Find the project card for the sub-issue
+                  const { data: cards } = await github.rest.projects.listCards({
+                    column_id: columnId
                   });
+
+                  const subIssueCard = cards.find(card => 
+                    card.content_url.includes(`/issues/${subIssueNumber}`)
+                  );
+
+                  if (subIssueCard) {
+                    // Move sub-issue card to the same column
+                    await github.rest.projects.moveCard({
+                      card_id: subIssueCard.id,
+                      position: "top",
+                      column_id: columnId
+                    });
+                  }
                 }
               }
             }
