--- a/.github/ISSUE_TEMPLATE/subtask_request.yml
+++ b/.github/ISSUE_TEMPLATE/subtask_request.yml
@@ -1,22 +1,15 @@
-name: 'Parent Task Request'
-description: 'Suggest a new issue or improvement'
-title: '[Parent Task] <title>'
-labels: [Parent Task, Needs Triage]
+name: '🎭 SubTask Request'
+description: 'Suggest a new subtask or improvement'
+title: '[SubTask] <title>'
+labels: [SubTask, Needs Triage]
 body:
   - type: textarea
     attributes:
-      label: 'Parent Task Description'
-      description: 'A clear and concise description of the issue you want to request.'
+      label: 'SubTask Description'
+      description: 'A clear and concise description of the subtask.'
     validations:
       required: true
-  - type: markdown
+  - type: input
     attributes:
-      value: |
-        **Sub-issues:**  
-        To link sub-issues, add them below in the format:  
-        - [ ] #1234 (Example sub-issue)  
-        - [ ] #5678 (Another sub-issue)
-  - type: textarea
-    attributes:
-      label: 'Linked Sub-issues'
-      description: 'List sub-issues using the format: `- [ ] #<issue-number>`'
+      label: 'Parent Issue'
+      description: 'Provide the parent issue number in the format: `#1234`'
