--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,10 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+# This is to ignore the .env files in the root directory!
+.env
+.env.*.local
+.env.*
+.env.local
+.env.development.local
+.env.test.local
