--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "@tanstack/react-query": "^5.74.3",
     "@tanstack/react-query-devtools": "^5.74.3",
     "@types/dompurify": "^3.0.5",
+    "@types/react-datepicker": "^6.2.0",
     "axios": "^1.8.4",
     "bootstrap": "^5.3.5",
     "bootstrap-icons": "^1.11.3",
+    "date-fns": "^4.1.0",
     "dompurify": "^3.2.5",
-    "react": "^19.1.0",
+    "react": "^18.3.1",
     "react-bootstrap": "^2.10.9",
-    "react-dom": "^19.1.0",
+    "react-datepicker": "^8.3.0",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^7.4.0"
