--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bootstrap-icons": "^1.11.3",
     "date-fns": "^4.1.0",
     "dompurify": "^3.2.5",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.9",
     "react-datepicker": "^8.3.0",
